k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emsp-simulator
  labels:
    name: emsp-simulator
    environment: development
